# laba_prog

./: .coverage  README.md  pyproject.toml
data/: report.csv  students.csv  students_input.json
data/samples/: cities.csv  people.csv  people.json
laba_01/: ex 3.py  ex 5.py  ex 6.py  ex 7.py  ex_1.py
lib/: json_csv.py  lib-text.py  text.py
src/: ex1.py  ex2.py  ex_01.py  ex_1.py  ex_2.py  group.py  io_txt_csv.py  lib.py  models.py  serialize.py  text_report.py  text_report2.py
src/src/: ex_1.py  ex_2.py  text.py  text_stats.py
src/src/lab02/: ex1.py  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py  ex7.py  ex_1.py
src/src/laba01/: ex1.py  ex2.py  ex4.py  ex5.py
src/src/text/: ex1.py  ex2.py  ex3.py
tests/: ex_1.py  ex_2.py
